src/objects/Vend_Product__c.object
<CustomObject>
    <fields>
        <fullName>Product_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked means that the record has been processed and the Salesforce Product created or updated.</description>
        <label>Product Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Product Type as it comes from Vend.</description>
        <label>Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vend_Name__c</fullName>
        <description>The Vend Product Name as it comes from Vend.</description>
        <label>Vend Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>Holds the Prooduct Id that comes from Vend.</description>
        <externalId>true</externalId>
        <label>Vend Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <label>Sku</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <label>Vend Product</label>
    <nameField>
        <displayFormat>VP-{00000}</displayFormat>
        <label>Vend Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vend Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>